# winzy-banner

./: README.md  pyproject.toml
tests/: test_winzy_banner.py
winzy_banner/: __init__.py
winzy_banner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
