[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winzy-banner"
version = "0.1.2"
description = "Display Banner text"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-banner"
Changelog = "https://github.com/sukhbinder/winzy-banner/releases"
Issues = "https://github.com/sukhbinder/winzy-banner/issues"
CI = "https://github.com/sukhbinder/winzy-banner/actions"

[project.entry-points."winzy.plugins"]
banner = "winzy_banner:banner_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
